[gd_scene load_steps=10 format=3 uid="uid://crstkgfgxi5pv"]

[ext_resource type="Script" path="res://scripts/motherfish.gd" id="1_xbitc"]
[ext_resource type="Texture2D" uid="uid://b2ydkf5njndxc" path="res://assets/2d/shooterMinigame/explosionSprite.png" id="2_q2d7m"]
[ext_resource type="Texture2D" uid="uid://u3yjtlytdn1l" path="res://assets/2d/shooterMinigame/motherfish.png" id="3_q6mk5"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ldh3o"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bkwhd"]
emission_shape = 3
emission_box_extents = Vector3(30, 75, 1)
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 4.0
scale_max = 4.0
anim_speed_min = 0.8
anim_speed_max = 1.2
attractor_interaction_enabled = false

[sub_resource type="CircleShape2D" id="CircleShape2D_ps4up"]
radius = 50.636

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u22jb"]
size = Vector2(128, 100)

[sub_resource type="Animation" id="Animation_csfyf"]
resource_name = "float"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(2, -40), Vector2(2, -48)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_chl5x"]
_data = {
"float": SubResource("Animation_csfyf")
}

[node name="motherfish" type="CharacterBody2D"]
position = Vector2(1055, 351)
collision_layer = 64
collision_mask = 0
script = ExtResource("1_xbitc")

[node name="bulletPivot" type="Node2D" parent="."]
position = Vector2(2, -86)

[node name="nTarget" type="Node2D" parent="bulletPivot"]
position = Vector2(5, -3.05176e-05)
rotation = 1.57079

[node name="neTarget" type="Node2D" parent="bulletPivot"]
position = Vector2(3.53552, 3.53549)
rotation = 2.35619

[node name="eTarget" type="Node2D" parent="bulletPivot"]
position = Vector2(0, 5)
rotation = 3.14158

[node name="seTarget" type="Node2D" parent="bulletPivot"]
position = Vector2(-3.53552, 3.53555)
rotation = -2.3562

[node name="sTarget" type="Node2D" parent="bulletPivot"]
position = Vector2(-5, 3.05176e-05)
rotation = -1.5708

[node name="swTarget" type="Node2D" parent="bulletPivot"]
position = Vector2(-3.53552, -3.53549)
rotation = -0.785406

[node name="wTarget" type="Node2D" parent="bulletPivot"]
position = Vector2(0, -5)

[node name="nwTarget" type="Node2D" parent="bulletPivot"]
position = Vector2(3.53552, -3.53555)
rotation = 0.785388

[node name="explosionParticles" type="GPUParticles2D" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_ldh3o")
position = Vector2(1, -41)
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_bkwhd")
texture = ExtResource("2_q2d7m")
one_shot = true
speed_scale = 4.0
explosiveness = 1.0

[node name="sprite" type="Sprite2D" parent="."]
z_index = 3
texture_filter = 1
position = Vector2(2, -40)
scale = Vector2(4, 4)
texture = ExtResource("3_q6mk5")

[node name="health" type="ColorRect" parent="sprite"]
offset_left = -14.0
offset_top = -26.0
offset_right = 14.0
offset_bottom = -24.0
color = Color(0.929412, 0.94902, 0.886275, 1)

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(3, -86)
shape = SubResource("CircleShape2D_ps4up")

[node name="bulletScanner" type="Area2D" parent="."]
position = Vector2(0, -40)
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="hitbox" type="CollisionShape2D" parent="bulletScanner"]
position = Vector2(2, -46)
shape = SubResource("RectangleShape2D_u22jb")

[node name="floatAnim" type="AnimationPlayer" parent="."]
autoplay = "float"
speed_scale = 0.5
libraries = {
"": SubResource("AnimationLibrary_chl5x")
}

[node name="bulletTimer" type="Timer" parent="."]

[connection signal="area_entered" from="bulletScanner" to="." method="_on_bullet_scanner_area_entered"]
[connection signal="timeout" from="bulletTimer" to="." method="_on_bullet_timer_timeout"]
